--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caesar Cipher</title>
+    <title>Caesar-Cipher</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1><center>Caesar Cipher</center></h1>
+    <h1><center>Caesar-Cipher</center></h1>
     <form>
-     <center><h3>Enter Text/Code:</h3></center>  
+     <center><h3>Enter Text here/Code:</h3></center>  
      <textarea id="message" name = "message" placeholder=" Enter text/code "></textarea><br/>
      <h3 id="key">Key Value : &nbsp;&nbsp;
      <input type="number" id="num"></h3><br/>
